# inventory-manager

./: README.md  inventory.db  pyproject.toml
app/: controllers.py  database.py  main.py  models.py  schemas.py
gestao_inventario/: README.md
gestao_inventario/app/: controllers.py  models.py  schemas.py
