[project]
name = "gestao-inventario"
version = "0.1.0"
description = ""
authors = [
    {name = "Asafe Ruben",email = "asaferuben@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "flask",
    "flask-sqlalchemy",
    "flask-jwt-extended (>=4.7.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
