[tool.poetry]
name = "gestao-inventario"
version = "0.1.0"
description = "API de Gestão de Inventário com Flask, Pydantic e JWT"
authors = ["Asafe Ruben <asaferuben@outlook.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<4"
flask = "*"
flask-sqlalchemy = "*"
flask-jwt-extended = ">=4.7.1,<5.0.0"
pydantic = ">=2.12.5,<3.0.0"
sqlalchemy = ">=2.0.46,<3.0.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
python-jose = {extras = ["cryptography"], version = ">=3.5.0,<4.0.0"}
uvicorn = ">=0.40.0,<0.41.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"